--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,89 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chivo+Mono:wght@100&family=Lily+Script+One&display=swap');
 
-
+#root {
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+}
 
 * {
     box-sizing: border-box;
     font-size: 16px;
   }
-  
+
   .App {
+    background: linear-gradient(0deg, rgba(253,214,255,1) 6%, rgba(214,255,250,1) 92%);
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    border: 2px solid black;
   }
-  
+
+  .body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+  }
+
   .header {
-    font-family: 'Lily Script One', cursive;
+    font-family: 'Lily Script One', Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.35);
+    width: 100%;
+    margin-bottom: 20px;
+    border-bottom: 2px solid black;
   }
-  
+
   .header h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: left;
     padding-left: 5%;
     color: black;
-    text-shadow: -2px 2px gray ;
+    text-shadow: -3px 3px gray ;
   }
-  
-  .body {
-    background: linear-gradient(0deg, rgba(253,214,255,1) 6%, rgba(214,255,250,1) 92%);
-  }
-  
+
   .prompt {
     border: 1px solid rgb(0, 0, 0);
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.2);
   }
-  
+
   label {
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Bebas Neue', Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(0, 0, 0);
     font-weight: bold;
     font-size: 1.5rem;
+    margin-right: 15px;
   }
-  
+
   textarea {
-    font-family: 'Chivo Mono', monospace;
+    font-family: 'Chivo Mono', Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(0, 0, 0);
     font-size: 1rem;
-    border: 1px solid rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
+    padding: 5px;
+    box-shadow: -4px 4px rgb(0, 0, 0);
   }
 
   .button {
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Bebas Neue', Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(0, 0, 0);
-    font-weight: bold;
-    font-size: 1.3rem;
-    border: 1px solid rgb(0, 0, 0);
+    font-size: 1.2rem;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
+    width: 150%;
+    height: 40px;
+    box-shadow: -4px 4px rgb(0, 0, 0);
   }
-  
+
   .response {
-    font-family: 'Chivo Mono', monospace;
+    font-family: 'Chivo Mono', Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(255, 255, 255);
     font-size: 1.2rem;
     font-weight: 400;
@@ -72,5 +93,5 @@
     border-radius: 5px;
     margin-top: 5%;
     background-color: rgba(0, 0, 0, 0.5);
+    width: 85%;
   }
-  
